--- a/templates/home.html
+++ b/templates/home.html
@@ -6,33 +6,51 @@
     {% if user.is_authenticated %}
         <p class="user-name">Привіт, {{ user.username }}!</p>
         <p class="hero-menu "><a class="text-white" href="{% url 'logout' %}">Вийти</a></p>
-        <p>Привіт, я можу допомогти тобі! Розумний помічник Personal Assistant є Вашим особистим помічником, готовим
+        <p class="border border-black p-2 border-opacity-25 rounded-2 bg-light bg-gradient fs-5 text"
+           style="--bs-bg-opacity: .5;">Привіт, я можу допомогти
+            тобі! Розумний помічник
+            Personal
+            Assistant є Вашим
+            особистим помічником, готовим
             завжди прийти до Вас на допомогу. Ви можете за моєю допомогою:
             створювати список контактів, редагувати його, виконувати пошук, подивитися у кого найближчим часом буде день
             народження, зробити записи важливих подій, створювати теги для них, зберігати файли в хмарному середовищі,
             переглядати їх і ще багато іншого. Для цього потрібно просто зареєструватися та зайти під своїм профілем.
             Також з моєю допомогою можна переглянути погоду, курси валют і почитати свіжі новини на різну тематику.
         </p>
-        <h3 class="hero-title">Ваш Персональний Помічник очікує Ваших доручень. <br> Виберіть додаток:</h3>
-        <p><a href="{% url 'contact_list' %}" class="btn btn-primary btn-lg w-25" role="button">Переглянути
-            всі контакти</a>
-        </p>
-        <p><a href="{% url 'notes:note_list' %}" class="btn btn-primary btn-lg w-25" role="button">Переглянути
-            всі
-            нотатки</a></p>
-        <p><a href="{% url 'file_list' %}" class="btn btn-primary btn-lg w-25" role="button">Переглянути список
-            файлів</a></p>
+        <h3 class="hero-title text-center fs-2 text">Ваш Персональний Помічник очікує Ваших доручень. Виберіть
+            додаток:</h3>
+
+        <div class="container text-center">
+        <div class="row justify-content-between">
+        <div class="col">
+            <p><a href="{% url 'contact_list' %}" class="btn btn-primary btn-lg w-50" role="button">Переглянути
+                всі контакти</a>
+            </p>
+            <p><a href="{% url 'notes:note_list' %}" class="btn btn-primary btn-lg w-50" role="button">Переглянути
+                всі
+                нотатки</a></p>
+            <p><a href="{% url 'file_list' %}" class="btn btn-primary btn-lg w-50" role="button">Переглянути список
+                файлів</a></p>
+        </div>
+
     {% else %}
-        <p>Ви не ввійшли в систему</p>
-        <a href="{% url 'login' %}">Увійти</a> |
-        <a href="{% url 'signup' %}">Зареєструватися</a>
+        <div class="mb-3">
+            <p>Ви не ввійшли в систему</p>
+            <a href="{% url 'login' %}">Увійти</a> |
+            <a href="{% url 'signup' %}">Зареєструватися</a>
+        </div>
     {% endif %}
-    <div class="dropdown ms-auto mt-3">
-        <button class="btn btn-primary btn-lg w-25" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Вибрати ленту новостей
-        </button>
-        {#        <p><a href="#" class="btn btn-primary btn-lg w-25" role="button">Вибрати ленту новостей</a></p>#}
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+<div class="col">
+    <div class="dropdown">
+        <p class="mb-0">
+            <a class="btn btn-primary btn-lg w-50 dropdown-toggle " href="#" role="button"
+               data-bs-toggle="dropdown"
+               aria-expanded="false">
+                Вибрати ленту новостей
+            </a>
+        </p>
+        <ul class="dropdown-menu w-50 dropdown-menu-dark">
             <li><a class="dropdown-item" href="{% url 'news:show' category='politics' %}">Політика</a></li>
             <li><a class="dropdown-item" href="{% url 'news:show' category='economics' %}">Економіка</a></li>
             <li><a class="dropdown-item" href="{% url 'news:show' category='science' %}">Наука</a></li>
@@ -40,4 +58,15 @@
             <li><a class="dropdown-item" href="{% url 'news:show' category='health' %}">Здоров’я</a></li>
         </ul>
     </div>
+    <p class="mt-3">
+        <a href="{% url 'news:rates' %}" class="btn btn-primary btn-lg w-50" role="button">Курси валют</a>
+    </p>
+    <p>
+        <a href="{% url 'news:weather' %}" class="btn btn-primary btn-lg w-50" role="button">Погода</a>
+    </p>
+</div>
+
+</div>
+</div>
+
 {% endblock content %}
