fly.toml update

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 <body>
 <header class="p-3 mb-3 border-bottom">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a class="navbar-brand" href="{% url 'home' %}">Personal Assistant</a>
+        <a class="navbar-brand fs-4 text" href="{% url 'home' %}">Personal Assistant</a>
         <ul class="nav col-12 col-lg-auto ms-lg-auto mb-2 justify-content-center mb-md-0">
             {% if user.is_authenticated %}
                 <li><a href="{% url 'upload_file' %}" class="nav-link px-2 text-white">+ Новий файл</a>
@@ -71,8 +71,8 @@
     <div>
         <h6>GoIT Global Python Web 2023</h6>
         <ul>
-            <li><a href="#">Volodymyr Kurov</a></li>
-            <li><a href="">Сергій Шевченко</a></li>
+            <li><a href="https://www.linkedin.com/in/volodymyr-kurov-1a5043253">Volodymyr Kurov</a></li>
+            <li><a href="https://www.linkedin.com/in/shevchenko-sergiy/">Сергій Шевченко</a></li>
             <li><a href="">Денис Маштак</a></li>
             <li><a href="">Олександр Мартинюк</a></li>
         </ul>
