--- a/templates/rates.html
+++ b/templates/rates.html
@@ -3,27 +3,25 @@
 
 {% block content %}
 
-    <h1 style="text-align: center;">Курси валют НБУ на {{ list_rates }}</h1>
-    <a href="{% url 'home' %}" class="btn btn-secondary mt-3">На головну</a>
-    <div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Код валюти</th>
-                    <th>Назва</th>
-                    <th>Курс</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for item in list_exchange %}
-                    <tr>
-                        <td>{{ item.currency }}</td>
-                        <td>{{ item.name_currency }}</td>
-                        <td>{{ item.sale }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+<a href="{% url 'home' %}" class="btn btn-secondary mt-3">На головну</a>
+<h2 style="text-align: center;">Курси валют НБУ на {{ list_rates }}</h2>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Код валюти</th>
+            <th scope="col">Назва</th>
+            <th scope="col">Курс</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for item in list_exchange %}
+        <tr>
+            <td>{{ item.currency }}</td>
+            <td>{{ item.name_currency }}</td>
+            <td>{{ item.sale }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
 
 {% endblock content %}
