--- a/templates/weather.html
+++ b/templates/weather.html
@@ -1,58 +1,67 @@
 {% extends 'base.html' %}
 
 
+
+
 {% block content %}
 
-    <h1 style="text-align: center;">Погода по містах України на {{ context_weather }}</h1>
     <a href="{% url 'home' %}" class="btn btn-secondary mt-3">На головну</a>
-    <div>
-
-        {% for item in list_weather %}
-        <h3>{{ item.city }}</h1>
-        <table>
+    <h2 style="text-align: center;">Погода по містах України на {{ context_weather }}</h2>
+    <form method="get" action="{% url 'news:weather' %}">
+        {% csrf_token %}
+        {{ form.weather_city.label_tag }}
+        {{ form.weather_city }}
+        <button type="submit" class="btn btn-primary">Пошук</button>
+        {% if form.errors.weather_city %}
+            <ul style="list-style-type: none">
+                <li class="text-danger">{{ form.errors.weather_city }}</li>
+            </ul>
+        {% endif %}
+    </form>
+    {% for item in list_weather %}
+        <h4>{{ item.city }}</h4>
+        <table class="table table-striped">
             <thead>
-                <tr>
-                    <th></th>
-                    <th>ранок</th>
-                    <th>день</th>
-                    <th>вечір</th>
-                </tr>
-            </thead>            
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">ранок</th>
+                <th scope="col">день</th>
+                <th scope="col">ніч</th>
+            </tr>
+            </thead>
             <tbody>
-                <tr>
-                    <td>Температура, °C</td>
-                    <td>{{ item.morning_t }}</td>
-                    <td>{{ item.day_t }}</td>
-                    <td>{{ item.night_t }}</td>
-                </tr>
-                <tr>
-                    <td>Тиск, мм</td>
-                    <td>{{ item.tusk_m }}</td>
-                    <td>{{ item.tusk_d }}</td>
-                    <td>{{ item.tusk_n }}</td>
-                </tr>
-                <tr>
-                    <td>Вологість, %</td>
-                    <td>{{ item.vologist_m }}</td>
-                    <td>{{ item.vologist_d }}</td>
-                    <td>{{ item.vologist_n }}</td>
-                </tr>
-                <tr>
-                    <td>Вітер, м/сек</td>
-                    <td>{{ item.viter_m }}</td>
-                    <td>{{ item.viter_d }}</td>
-                    <td>{{ item.viter_n }}</td>
-                </tr>
-                <tr>
-                    <td>Ймовірність опадів, %</td>
-                    <td>{{ item.opadu_m }}</td>
-                    <td>{{ item.opadu_d }}</td>
-                    <td>{{ item.opadu_n }}</td>
-                </tr>
+            <tr>
+                <td>Температура, °C</td>
+                <td>{{ item.morning_t }}</td>
+                <td>{{ item.day_t }}</td>
+                <td>{{ item.night_t }}</td>
+            </tr>
+            <tr>
+                <td>Тиск, мм</td>
+                <td>{{ item.tusk_m }}</td>
+                <td>{{ item.tusk_d }}</td>
+                <td>{{ item.tusk_n }}</td>
+            </tr>
+            <tr>
+                <td>Вологість, %</td>
+                <td>{{ item.vologist_m }}</td>
+                <td>{{ item.vologist_d }}</td>
+                <td>{{ item.vologist_n }}</td>
+            </tr>
+            <tr>
+                <td>Вітер, м/сек</td>
+                <td>{{ item.viter_m }}</td>
+                <td>{{ item.viter_d }}</td>
+                <td>{{ item.viter_n }}</td>
+            </tr>
+            <tr>
+                <td>Ймовірність опадів, %</td>
+                <td>{{ item.opadu_m }}</td>
+                <td>{{ item.opadu_d }}</td>
+                <td>{{ item.opadu_n }}</td>
+            </tr>
             </tbody>
         </table>
-        {% endfor %}
-
-    </div>
+    {% endfor %}
 
 {% endblock content %}
