--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                 {#                </li>#}
                 <li><a href="{% url 'files:file_upload' %}" class="nav-link px-2 text-white">+ Новий файл</a>
                 </li>
-                <li><a href="{% url 'notes:note_list' %}" class="nav-link px-2 text-white">+ Нотатки</a></li>
+                <li><a href="{% url 'notes:note_list' %}" class="nav-link px-2 text-white">+ Нова Нотатка</a></li>
                 <li><a href="{% url 'contact_new' %}" class="nav-link px-2 text-white">+ Новий Контакт</a></li>
                 </ul>
                 <div class="dropdown text-end">
