base.html update +

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
     <div>
         <h6>GoIT Global Python Web 2023</h6>
         <ul>
-            <li><a target="_blank" href="https://www.linkedin.com/in/volodymyr-kurov-1a5043253">Volodymyr Kurov</a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/volodymyr-kurov-1a5043253">Володимир Куров</a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/shevchenko-sergiy/">Сергій Шевченко</a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/denis-mashtak-03531b269/">Денис Маштак</a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/oleksandr-martyniuk-b9116a298/">Олександр
