--- a/templates/notes/note_form.html
+++ b/templates/notes/note_form.html
@@ -36,7 +36,9 @@
         <div class="form-group row">
           <label for="id_tags" class="col-sm-3 col-form-label">Тег:</label>
           <div class="col-sm-9">
+            {% if teg.owner.pk == request.user.pk %}
             {{ form.tags }}
+            {% endif %}
           </div>
         </div>
 
