--- a/templates/files/file_list.html
+++ b/templates/files/file_list.html
@@ -24,8 +24,10 @@
                 {% for user_file in file_list %}
                     <p>
                         <strong>Category:</strong> {{ user_file.category }} |
-                        <strong>File:</strong> <a href="{{ user_file.file.url }}"
-                                                  target="_blank">{{ user_file.file.name }}</a>
+                        <strong>File:</strong> <a
+                            href="{% url 'files:download_file' user_file.pk %}"
+                            target="_blank"
+                    >{{ user_file.file.name }}</a>
                     </p>
                 {% endfor %}
             </div>
