files download update

--- a/templates/home.html
+++ b/templates/home.html
@@ -50,7 +50,7 @@
             <a class="btn btn-primary btn-lg w-50 dropdown-toggle " href="#" role="button"
                data-bs-toggle="dropdown"
                aria-expanded="false">
-                Вибрати ленту новостей
+                Вибрати стрічку новин
             </a>
         </p>
         <ul class="dropdown-menu w-50 dropdown-menu-dark">
