--- a/templates/files/file_upload.html
+++ b/templates/files/file_upload.html
@@ -11,7 +11,7 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit">Upload</button>
+        <button class="btn btn-success ml-2" type="submit">Upload</button>
     </form>
 
 {% endblock %}
