notes templates update

--- a/templates/notes/note_detail.html
+++ b/templates/notes/note_detail.html
@@ -27,7 +27,7 @@
         <div class="col-md-6">
             <a href="{% url 'notes:note_edit' note.id %}" class="btn btn-primary">Змінити нотатку</a>
             <br>
-            <a href="{% url 'notes:note_list' %}" class="btn btn-secondary mt-3">Назад</a>
+            <a href="{% url 'notes:note_list' %}" class="btn btn-secondary mt-3">Повернутися к списку нотаток</a>
         </div>
     </div>
 {% endblock content %}
