--- a/templates/notes/tag_list.html
+++ b/templates/notes/tag_list.html
@@ -35,5 +35,5 @@
     </table>
 
     <!-- Кнопка для повернення до списку заміток -->
-    <a href="{% url 'notes:note_list' %}" class="btn btn-secondary">Назад</a>
+    <a href="{% url 'notes:note_list' %}" class="btn btn-secondary">Повернутися к списку нотаток</a>
 {% endblock %}
